ChangeLog for Matrix Brandy - as forked from Sourceforge after V1.20.1
======================================================================

* 1.22.16 -
- System: Add '-tek' (or -t) option to enable Tek graphics for 'tbrandy'
  on compatible platforms. Equivalent to issuing SYS"Brandy_TekEnabled",1
- BASIC: LOCAL with no parameters now does nothing (as per Acorn) instead
  of reporting an error. This new behaviour is in place on a DEFAULT_IGNORE
  build unless -strict is set, or if -ignore is set.

* V1.22.15 - 21 March 2023
- System: For SDL builds, move ESCAPE polling to its own thread.
- System: Added CTRL+PrtSc to force immediate exit in SDL build.
  Unfortunately the Pause/Break key doesn't register in SDL. This
  functionality can be disabled with build-time option
  BRANDY_NOBREAKONCTRLPRTSC.
- System: Added some fixes to handle issues with the sdl12-compat
  library.
- System: Implemented an internal *./*CAT handler, loosely styled on BBC
  Micro ADFS output.
- System: Exit code is now ERR MOD 256 (or 255 if that would result in 0),
  or 0 if exited with no error.
  A program can still set its own exit code as a parameter to QUIT.
- System: Fixed a regression in the way floats were handled by SYS.
- System: Corrected a flawed usage of fcntl().
- MOS: Implemented OSBYTE 210
- BASIC: Extended ATN to take two parameters in parentheses, this calls
  atan2().

* V1.22.14 - 31 December 2022
- System: Workaround for sdl12-compat library bug affecting keyboard input.
- System: RISC OS SharedCLibrary build now supports networking.
- System: Now compiles on Solaris 11 (tested x86_64). Use "gmake".
- System: Now compiles on illumos (an OpenSolaris fork). Use makefiles in
  build directory.
- System: Text mode build available for Minix 3 (no networking yet).
  Use gmake -f build/makefile.minix
- System: Fixed a bug that caused Brandy to throw an Xlib error in some
  cases when exiting.
- Graphics: Fixed GCOL action codes 5-7 for filled rectangles (this function